# sqlalchemy_crud

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
alchemy_crud/: helper.py  typing.py
alchemy_crud/classes/: base.py
alchemy_crud/enum/: operation.py  sort_directions.py
alchemy_crud/exceptions/: base.py  invalid_filter.py
alchemy_crud/functions/: create.py  delete.py  read.py  update.py
alchemy_crud/models/: base.py  query.py
src/classes/: base.py
src/functions/: delete.py
src/models/: base.py  query.py
tests/: test_read.py
